# waterdip

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  README.md  codecov.yml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: DOCS.yml  ci.yml  docs.yml
concepts/metric_type_data_quality/: index.html
concepts/metric_type_drift/: index.html
concepts/metric_type_model_performance/: index.html
concepts/model_and_versions/: index.html
concepts/monitor_and_alerts/: index.html
concepts/what_is_ml_observability/: index.html
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: index.md
docs/concepts/: metric_type_data_quality.md  metric_type_drift.md  metric_type_model_performance.md  model _and_versions.md  monitor_and_alerts.md  what_is_ml_observability.md
docs/docs/: index.md
docs/getting_started/: quick_start.md
docs/introduction/: introduction.md  quick_start.md
docs/model_types/: binary_classification.md  multi_class_classification.md
docs/sending_data/: sending_live_events.md  uploading_baseline_dataset.md
docs/stylesheets/: extra.css
docs/support/: contact.md
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  config.ts  index.tsx
introduction/introduction/: index.html
introduction/quick_start/: index.html
search/: search_index.json
support/contact/: index.html
tests/: conftest.py  testing_helper_metrics_data.py  testing_helpers.py
waterdip/: __init__.py  __main__.py
(+210 files in other folders)
