[tool.poetry]
name = "waterdip"
version = "0.1.0"
description = ""
authors = [
    "Waterdip Labs <hello@waterdip.ai>"
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
pymongo = {version = "4.1.1", extras = ["srv"]}
loguru = "^0.6.0"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-mock = "^3.10.0"
mongomock = "^4.1.2"
pre-commit = "^2.20.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^8.5.6"

[tool.poetry.group.server]

[tool.poetry.group.server.dependencies]
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
gunicorn = "^20.1.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
